<resources>
    <string name="app_name">IboraPOS</string>
    <string name="Accessa">Accessa</string>
    <string name="heading">Two Fragments in One Activity</string>
    <string name="fragment1_button">Display First Fragment</string>
    <string name="fragment2_button">Display Second Fragment</string>
    <string name="fragment1_text1">Displaying contents of the First Fragment</string>
    <string name="fragment2_text1">Displaying contents of the Second Fragment</string>
    <string name="title_activity_poduct">product</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="keyword">keyword</string>
    <string name="search_label">Customers</string>
    <string name="search_hint">Search product</string>
    <string name="settings_description">List of Customers</string>
    <string name="title_activity_product_drawer">ProductDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="SoldBy">Sold By</string>
    <string name="soldBy_each">Each</string>
    <string name="soldBy_volume">Volume</string>
    <string name="cost">cost</string>
    <string name="sku">SKU:Recomanded Price</string>
    <string name="variant">Variants</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="message">Message</string>
    <string name="send">Add Product</string>
    <string name="Desc">Item description</string>
    <string name="LongDesc">Long Item description</string>
    <string name="name">Item Name</string>
    <string name="price">Price in Rs</string>
    <string name="category">Category</string>
    <string name="Vat">VAT</string>
    <string name="Barcode">Barcode</string>
    <string name="Department">Department</string>
    <string name="SubDept">Sub Department</string>
    <string name="weight">Weight</string>
    <string name="quantity">Quantity</string>
    <string name="expirydate">Expiry Date</string>
    <string name="modDept">Update Department</string>
    <string name="VAT_0">VAT 0%</string>
    <string name="VAT_Exempted">VAT Exempted</string>
    <string name="VAT_15">VAT 15%</string>
    <string name="Deptname">Department Name</string>
    <string name="LastModified">Last Modified</string>
    <string name="userid">Modified By</string>
    <string name="DepartmentCode">Department Code</string>
    <string name="Select_Image">Select Image</string>
    <string name="toggle_button_text">Available for sale?</string>
    <string name="Perishable">Does this have an expiry date?</string>
    <string name="addDept">Add Department</string>
    <string name="addSubDept">Add Sub Department</string>
<string name="spinner_prompt">itemqqs</string>
    <string-array name="spinner_items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        
    </string-array>
        <string name="function_all">Comprehensive Test</string>
        <string name="function_qrcode">QR Code</string>
        <string name="function_barcode">Bar Code</string>
        <string name="function_text">Text</string>
        <string name="function_tab">Form</string>
        <string name="function_pic">Picture</string>
        <string name="function_multi">Multi Threading</string>
        <string name="function_threeline">Paper Feed</string>
        <string name="function_buffer">Transaction Print</string>
        <string name="function_blackline">Black Label</string>
        <string name="function_cash">Cash Test</string>
        <string name="function_lcd">Lcd Test</string>
        <string name="function_status">Status</string>
        <string name="function_label">Label Test</string>
        <string name="setting_title">Setting</string>
        <string name="info_title">PrinterInformation</string>
        <string name="qr_title">Qr Test</string>
        <string name="barcode_title">BarCode Test</string>
        <string name="text_title">Text Test</string>
        <string name="bitmap_title">Picture Test</string>
        <string name="tab_title">Form Test</string>
        <string name="all_title">Comprehensive Test</string>
        <string name="buffer_title">Transaction Test</string>
        <string name="blackline_title">Black Label Test</string>
        <string name="lcd_title">Lcd Test</string>
        <string name="label_title">Label Test</string>
        <string name="printer_serial_num">serial number</string>
        <string name="printer_model">printer model</string>
        <string name="printer_head">printer head</string>
        <string name="printer_firmware">printer firmware version</string>
        <string name="printer_head_size">priner head size</string>
        <string name="printer_distance">printed distance</string>
        <string name="printer_version">service version</string>
        <string name="printer_dev_version">development version</string>
        <string name="enter_work">Enter Transaction</string>
        <string name="exit_work">Exit Transaction</string>
        <string name="start_work">Start Transaction</string>
        <string name="start_work_low">Start Printing</string>
        <string name="over_work">End Transaction</string>
        <string name="error_work">Exception Occurred</string>
        <string name="print_baidu_ticket">Print Baidu ticket</string>
        <string name="print_meituan_ticket">Print Meituan ticket</string>
        <string name="print_eleme_ticket">Print Eleme ticket</string>
        <string name="print_koubei_ticket">Print Koubei ticket</string>
        <string name="print_interval_black">Print Interval Black</string>
        <string name="print_black">Print Black</string>
        <string name="print">Print</string>
        <string name="printing">Printing~~~</string>
        <string name="input_barcode">Please input barcode content</string>
        <string name="content_barcode">barcode</string>
        <string name="encode_barcode">barcode encode</string>
        <string name="no_print">text null</string>
        <string name="barcode_up">upon barcode</string>
        <string name="barcode_down">beneath barcode</string>
        <string name="barcode_updown">up and beneath</string>
        <string name="text_position">HRI position</string>
        <string name="barcode_height">height</string>
        <string name="barcode_width">width</string>
        <string name="content_qrcode">qrcode</string>
        <string name="input_qrcode">Please input QrCode content</string>
        <string name="size_qrcode">QR-Code size</string>
        <string name="error_qrcode">error correctionlevel </string>
        <string name="upload_info">Upload Printer Info</string>
        <string name="characterset">char set</string>
        <string name="connect_method">connect method</string>
        <string name="size_paper">paper size</string>
        <string name="size_text">text size</string>
        <string name="type_text">text typeface</string>
        <string name="bold_text">bold</string>
        <string name="underline_text">underline</string>
        <string name="print_density">printer density</string>
        <string name="add_line">add</string>
        <string name="content_form">content</string>
        <string name="weight_form">weight%</string>
        <string name="align_form">align</string>
        <string name="align_left">left</string>
        <string name="align_mid">middle</string>
        <string name="align_right">right</string>
        <string name="confirm">Confirm</string>
        <string name="cancel">Cancel</string>
        <string name="about">about</string>
        <string name="single">single</string>
        <string name="twice">double</string>
        <string name="connect_service">Connect</string>
        <string name="disconnect_service">Disconnect</string>
        <string name="input_order">input epson command:</string>
        <string name="multithread">multithread</string>
        <string name="multithread_stop">stop</string>
        <string name="pic_pos">picture arrangement mode</string>
        <string name="pic_hor">transverse</string>
        <string name="pic_ver">portrait</string>
        <string name="pic_mode">picture printing method</string>
        <string name="pic_mode1">raster bitmap</string>
        <string name="pic_mode2">8 point single density</string>
        <string name="pic_mode3">8 point double density</string>
        <string name="pic_mode4">24 point single density</string>
        <string name="pic_mode5">24 point double density</string>
        <string name="style_width">times width</string>
        <string name="style_height">times height</string>
        <string name="buffer_info1">Event Print: Controls the print of each order for print status\nIn the process of printing a single transaction, if there is an out-of-paper abnormalities, after the paper state is restored, you can choose to reprint a single.</string>
        <string name="buffer_info2">Step1:start event print model\nStep2:add an event\nStep3:quit event print model</string>
    <string name="AddCat">Add category</string>
    <string name="admin">Admin</string>
    <string name="Sales">Sales</string>
    <string name="Items">Items</string>
    <string name="Shift">Shift</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="Profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="Receipts">Receipts</string>
    <string name="discount">Discount</string>
    <string name="LCDSettings">Settings</string>
    <string name="TicketSettings">Tickets Settings</string>
    <string name="ClearTicket">Clear Tickets</string>
    <string name="lcdsleep">LCD Sleep</string>
    <string name="lcdwake">LCD Wakeup</string>
    <string name="lcdclear">LCD Clear</string>
    <string name="lcdinit">LCD Init</string>
    <string name="lcdimg">Send a pic</string>
    <string name="sendtext">Send a text</string>
    <string name="MyProfile">Profile</string>
    <string name="OpenDrawer">Open Drawer</string>
    <string name="Report">Report</string>
    <string name="set_start_tip">Connect the cloud printer you want to set</string>
    <string name="set_start_tip1">1.Connect the cloud printer to the power supply, and long press the pairing button for 3 seconds to turn on the pairing mode. After hearing the prompt tone, release the pairing button;</string>
    <string name="set_start_tip2">2.Click the "Start Setting" button below, select the connected cloud printer WIFI, and enter the password; (Please ensure that the mobile phone Bluetooth is turned on; and ensure that the app location authorization is turned on)</string>
    <string name="set_start_next">Start Setup</string>
    <string name="Daily">Daily amount</string>
    <string name="weekly">Weekly Amount</string>
    <string name="monthly">Monthly Amount</string>
    <string name="salesreport">Sales Report</string>
    <string name="buyer">Buyer</string>
    <string name="vat_prompt">VAT</string>
    <string name="type">Type</string>
    <string name="Splitbill">Split Bill</string>
    <string name="ClearTransaction">Clear Transaction</string>
    <string name="ClearPayment">Clear Payments</string>
    <string name="Cashiorsalesreport">Cashier Sales Report</string>
    <string name="Editcovernum">Edit Servings Amount</string>
</resources>