<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/Sales"
        android:icon="@drawable/baseline_shopping_basket_24"
        android:title="@string/Sales" />
    <item
        android:id="@+id/Receipts"
        android:icon="@drawable/receipts"
        android:title="@string/Receipts" />
    <item
        android:id="@+id/Shift"
        android:icon="@drawable/shift"
        android:title="@string/Shift" />
    <item
        android:id="@+id/Items"
        android:icon="@drawable/baseline_view_list_24"
        android:title="@string/Items" />
    <item
        android:id="@+id/Settings"
        android:icon="@drawable/baseline_settings_suggest_24"
        android:title="@string/Settings" />
    <item
        android:id="@+id/Help"
        android:icon="@drawable/baseline_live_help_24"
        android:title="@string/Help" />

    <item android:title="@string/Profile">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/Logout" />
            <item
                android:id="@+id/nav_Admin"
                android:icon="@drawable/baseline_admin_panel_settings_24"
                android:title="@string/admin" />
        </menu>
    </item>
    <!-- Footer -->
    <item
        android:id="@+id/footer"
        android:title=""
        android:enabled="false"
        android:actionLayout="@layout/version_nav_footer" />
</menu>
