<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".product.items.AddItemActivity"
    tools:showIn="@layout/activity_add_record"
    android:background="@drawable/centre_background"
    android:focusableInTouchMode="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/personalDetailsCard"
        style="@style/centreLocatorCardDesign"
        android:layout_marginTop="200dp"
        app:cardCornerRadius="16dp"
        android:layout_width="1200dp"
        app:cardElevation="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="20dp">



                <EditText
                    android:id="@+id/itemName_edittext"
                    style="@style/modifiedEditText"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:ems="10"/>
            <EditText
                android:id="@+id/IdBarcode_edittext"
                style="@style/modifiedEditText"
                android:hint="@string/Barcode"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"/>
            <EditText
                android:id="@+id/Dept_edittext"
                style="@style/modifiedEditText"
                android:hint="@string/Barcode"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"/>
            <EditText
                android:id="@+id/SubDept_edittext"
                style="@style/modifiedEditText"
                android:hint="@string/Barcode"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"/>

            <EditText
                android:id="@+id/category_edittext"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/category" />




                <EditText
                    android:id="@+id/description_edittext"
                    style="@style/modifiedEditText"
                    android:ems="10"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/Desc"
                    android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/long_description_edittext"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/LongDesc" />

                <EditText
                    android:id="@+id/price_edittext"
                    style="@style/modifiedEditText"
                    android:hint="@string/price"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:layout_height="100dp"
                    android:inputType="phone" />

            <EditText
                android:id="@+id/weight_edittext"
                style="@style/modifiedEditText"
                android:hint="@string/weight"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="100dp"
                android:inputType="phone" />
            <EditText
                android:id="@+id/quantity_edittext"
                style="@style/modifiedEditText"
                android:hint="@string/quantity"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="100dp"
                android:inputType="phone" />
            <EditText
                android:id="@+id/expirydate_edittext"
                style="@style/modifiedEditText"
                android:hint="@string/expirydate"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="100dp"
                android:inputType="phone" />
            <EditText
                android:id="@+id/Vat_edittext"
                style="@style/modifiedEditText"
                android:hint="@string/Vat"
                android:layout_width="match_parent"

                android:ems="10"
                android:layout_height="100dp"
                android:inputType="phone" />


            <Button
                android:id="@+id/add_record"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/centre_button"
                android:text="@string/send"
                android:layout_gravity="center"
                android:textColor="@color/whiteTextColor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>


