<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Department Spinner -->
    <Spinner
        android:id="@+id/spinner_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_prompt"/>


    <!-- Amount EditText -->
    <EditText
        android:id="@+id/edit_text_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Amount"/>

    <!-- VAT Spinner -->
    <Spinner
        android:id="@+id/spinner_vat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/vat_prompt"/>

    <!-- type Spinner -->
    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/type"/>


    <!-- discount Spinner -->
    <Spinner
        android:id="@+id/spinner_discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/discount"/>


    <!-- Save Button -->
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"/>

</LinearLayout>
