<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/BleuAccessaText"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/personalDetailsCard"
            style="@style/centreLocatorCardDesign"
            app:cardCornerRadius="16dp"
            android:layout_width="match_parent"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="false"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:id="@+id/CatName_edittext"
                    style="@style/modifiedEditText"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/Color_edittext"
                    style="@style/modifiedEditText"
                    android:hint="@string/Barcode"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />



                <Button
                    android:id="@+id/add_record"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/centre_button"
                    android:text="@string/AddCat"
                    android:textColor="@color/whiteTextColor" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</ScrollView>


